--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -1,11 +1,12 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro';
 import { getCollection, render } from 'astro:content';
+import { postPath } from '../utils/post-path';
 
 export async function getStaticPaths() {
-  const posts = await getCollection('blog');
+  const posts = (await getCollection('blog')).filter((post) => !post.data.draft);
   return posts.map((post) => ({
-    params: { slug: post.id },
+    params: { path: postPath(post.data.pubDate, post.data.slug).slice(1) },
     props: { post },
   }));
 }
