--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const postsWithContent = await Promise.all(
 );
 ---
 
-<Layout title="Gian.cool Blog">
+<Layout title="Gianfranco's Blog - gian.cool">
   <header class="mb-16 md:mb-20">
     <h1 class="font-serif text-5xl md:text-5xl tracking-tight leading-[1.1]">
       Gian.cool
