--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ interface Props {
   description?: string;
 }
 
-const { title, description = "Gian.cool Blog" } = Astro.props;
+const { title, description = "Gianfranco's Blog - gian.cool" } = Astro.props;
 ---
 
 <html lang="en" class="scroll-smooth dark">
