--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -55,7 +55,7 @@ const { Content } = await render(post);
       prose-p:leading-relaxed prose-p:text-ink/80 dark:prose-p:text-dark-text/80
       prose-a:text-terracotta dark:prose-a:text-dark-terracotta prose-a:underline-offset-2 prose-a:decoration-terracotta/30 hover:prose-a:decoration-terracotta
       prose-strong:font-semibold prose-strong:text-ink dark:prose-strong:text-dark-text
-      prose-code:text-sm prose-code:font-mono prose-code:bg-ink/5 dark:prose-code:bg-dark-text/5 prose-code:px-1.5 prose-code:py-0.5 prose-code:rounded
+      prose-code:text-sm prose-code:font-mono prose-code:bg-ink/5 dark:prose-code:bg-dark-text/10 dark:prose-code:text-dark-text prose-code:px-1.5 prose-code:py-0.5 prose-code:rounded
       prose-pre:bg-ink/5 dark:prose-pre:bg-dark-text/5 prose-pre:border prose-pre:border-border dark:prose-pre:border-dark-border
       prose-li:text-ink/80 dark:prose-li:text-dark-text/80
       prose-ul:list-disc prose-ul:pl-4
