fix h2 colors in dark mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const postsWithContent = await Promise.all(
             </div>
             <a
               href={postPath(post.data.pubDate, post.data.slug)}
-              class="inline-block mt-2 text-sm text-terracotta dark:text-dark-terracotta hover:underline underline-offset-2"
+              class="inline-block mt-2 text-sm text-terracotta hover:underline underline-offset-2"
             >
               Read more →
             </a>
